# tm-exclude-watcher

./: AGENT.md  CHANGELOG.md  CONTEXT.md  Cargo.toml  FIXES.md  LICENSE  README.en.md  README.md  TDD_PLAN_ISSUE3.md  dist-workspace.toml  fix-plan.md  issues.md  launchd-migration-plan.md  plan.md  tm-exclude-watcher-prd.md  todo.md
.claude/skills/stacked-issue-pr-workflow/: SKILL.md
.claude/skills/stacked-issue-pr-workflow/agents/: openai.yaml
.github/workflows/: release.yml
docs/: CONTEXT.md  issues.md  release.md  tm-exclude-watcher-prd.md  todo.md
docs/adr/: 0001-multiprocess-database-access.md  0002-daemon-lifecycle-phased-approach.md  0003-remove-directory-size-filtering.md
examples/: bench_walk.rs
scripts/: render-homebrew-formula.sh
skills/: README.md
skills/stacked-issue-pr-workflow/: SKILL.md
src/: cleaner.rs  config.rs  daemon.rs  database.rs  doctor.rs  launchd.rs  lib.rs  list.rs  logging.rs  logs.rs  main.rs  rules.rs  scanner.rs  tm_backend.rs  tmutil.rs  watcher.rs
src/daemon/: lifecycle.rs  mod.rs  preflight.rs  scheduling.rs  status.rs
tests/: cli_test.rs  config_test.rs  context_doc_test.rs  core_tests.rs  e2e_tests.rs  edge_tests.rs  homebrew_formula_test.rs  integration_test.rs  issue2_cleaner_tests.rs  issue2_database_tests.rs  manual_test.rs  readme_test.rs  release_workflow_test.rs  watcher_unit_tests.rs
tests/support/: fake_tmutil.rs  mod.rs
