[package]
name = "tm-watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
walkdir = "2.4"
dirs = "5.0"
notify = "6.1"
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "time", "sync", "signal"] }
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
tempfile = "3.8"
