[package]
name = "tm-watcher"
version = "0.3.0"
edition = "2024"
description = "Automatically manage macOS Time Machine exclusions for development directories"
repository = "https://github.com/zzerding/tm-exclude-watcher"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
rusqlite = { version = "0.31", features = ["bundled"] }
walkdir = "2.4"
anyhow = "1.0"
jwalk = "0.8.1"
notify = "6.1"
tokio = { version = "1", features = ["full"] }
libc = "0.2"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3.8"

[profile.dev]
debug = "line-tables-only"

[profile.test]
debug = "line-tables-only"

[profile.dist]
inherits = "release"
